trunk/Archive2/ab/408f87044c03e8/output
main.cpp: In function 'int main()':
main.cpp:2:15: error: 'long long long' is too long for GCC
     long long long x = 0;
               ^
